<resources>
    <string name="app_name">老吾老</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="read_button">朗读</string>
    <string name="return_button">返回</string>
    <string name="help_button">求助</string>
    <string name="setting_button">设置</string>
    <string name="communicate_button">沟通</string>
    <string name="relax_button">休闲</string>
    <string name="tool_button">工具</string>
    <string name="message_toast">信息发送成功！</string>
    <string name="help_text">\t您的求助信息已经成功发送，如果您仍需要帮助请点击报警或者急救电话。如果您是不小心点击错误，请点击点错了。</string>
    <string name="police_button">报警</string>
    <string name="aid_button">急救</string>
    <string name="miss_button">点错了</string>
    <string name="surf_button"> 上网</string>
    <string name="vedio_button">视频</string>
    <string name="new_button">新建联系人</string>
    <string name="call_button">打电话</string>
    <string name="video_call_button">视频电话</string>
    <string name="message_button">发短信</string>
    <string name="send_button">发送短信</string>
    <string name="internal_news">国内</string>
    <string name="international_news">国际</string>
    <string name="pe_news">体育</string>
    <string name="lottery_ticket_news">彩票</string>
    <string name="military_news">军事</string>
    <string name="education_news">教育</string>
    <string name="weibo_news">微博</string>
    <string name="science_news">科技</string>
    <string name="social_news">社会</string>
    <string name="review_news">评论</string>
    <string name="readbook_button">阅读</string>
    <string name="code_utf8">UTF-8</string>
    <string name="code_gb2312">GB2312</string>
    <string name="about">About</string>
    <string name="switch_code">PRESS MENU CHANGE THE ENCODE</string>
    <string name="aboutTitle">Simple TXT Reader</string>
    <string name="aboutInfo">Java.io.inputStreamReader(InputStream stream,String enc) 的简单应用</string>
    <string name="aboutOK">QUIT</string>
    <string name="scan_button">扫码</string>
    <string name="good_name">货物名</string>
    <string name="company_name">公司名</string>
    <string name="price">价格</string>
    <string name="special">其他信息</string>
    <string name="search_time">查询时间</string>

    <string name="weather_forecast_title">天气预报</string>

    <string name="weather_forecast_current">实时天气预报</string>

    <string name="weather_forecast_future">未来天气预报</string>

    <string name="location_title">定位</string>

    <string name="location_net_method">网络（基站+WIFI）定位</string>

    <string name="location_mulity_method">混合定位（GPS+网络）</string>

    <string name="location_gps_method">GPS定位（建议室外使用）</string>

    <string name="location_geofence_method">地理围栏（警戒区域提醒）</string>

    <string name="current_weather_report_title">实时天气</string>

    <string name="future_weather_report_title">天气预报</string>

    <string name="net_location_title">网络定位</string>

    <string name="gps_location_title">GPS定位</string>

    <string name="weather_location">"地 点："</string>

    <string name="weather_weather">"天 气："</string>

    <string name="weather_temperature">"气 温："</string>

    <string name="weather_wind_direction">"风 向："</string>

    <string name="weather_wind_power">"风 力："</string>

    <string name="weather_air_humidity">空气湿度：</string>

    <string name="weather_weather_publish">发布时间：</string>

    <string name="location_latlng">"坐 标："</string>

    <string name="location_accurancy">"精 度："</string>

    <string name="location_method">定位方式：</string>

    <string name="location_time">定位时间：</string>

    <string name="location_description">位置描述：</string>

    <string name="location_country">国      家 ：</string>

    <string name="location_province">          省 ：</string>

    <string name="location_city">          市 ：</string>

    <string name="location_county">          区 ：</string>

    <string name="location_road">街      道 ：</string>

    <string name="location_poi">POI名称 ：</string>

    <string name="location_city_code">城市编码：</string>

    <string name="location_area_code">区域编码：</string>

    <string name="gpsfollow">追随</string>

    <string name="gpslocate">定位</string>

    <string name="gpsrotate">旋转</string>

    <string name="location_des_open_text">是否打开位置信息描述：</string>

    <string name="yes">是</string>

    <string name="no">否</string>

    <string name="geofence_des">点击地图，以点击点为中心建立地理围栏，再次点击地图修改地理围栏位置</string>
</resources>
