<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#996b1f">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/contact_pic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/vedio_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_call_button"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
